update (backend) : complete TRANSACTION documentation & parameters
